--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.22.0",
+        "axios": "^1.6.2",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
+        "csurf": "^1.11.0",
+        "csv-writer": "^1.6.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
@@ -35,21 +38,28 @@
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.9.7",
         "pdfkit": "^0.13.0",
         "redis": "^4.6.11",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
         "uuid": "^9.0.1",
         "winston": "^3.11.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
+        "@types/csurf": "^1.11.5",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.10.6",
+        "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.14",
         "@types/pdfkit": "^0.13.0",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
